# pippin

./: .gitignore  .gitleaks.toml  .swiftformat  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  SKILL.md  TIMEOUT_ANALYSIS.md  issues.jsonl  manifest  mssacsa4elgummpu6qjftuvvquha3gec.darc  mvuur9bdplefau0ssitqu7crnoijf9aj.darc  n2s1fjjevmju3ipniamtqsr2cqjdlgna  rotnmsnatdubhpm4m8oajqtacvuc5jai  tb1dhkbtdoqkeavlagcuja65qjhn1tff
.beads/: .beads-credential-key  config.yaml  interactions 2.jsonl  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/agents/: applescript-security-reviewer.md  headless-compatibility-checker.md
.claude/hooks/: block-voicememos-writes.py  swiftformat-on-edit.py  xcodebuild-check.py
.forgejo/workflows/: ci.yaml  (+1 more)
.github/: copilot-instructions.md  copilot-setup-steps.yml
CDisclaimSpawn/: cdisclaimspawn.c
CTypedStreamDecode/: CTypedStreamDecode.m
docs/: README.md  ROADMAP.md  local-ci.md  mcp-server.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
pippin/: BatchBudget.swift  CacheDB.swift  ConcurrentBudget.swift  DetachBlocking.swift  DisclaimRespawn.swift  Pippin.swift  SessionState.swift  SoftTimeout.swift  TemporaryFile.swift  Version.swift  main.swift
pippin-entry/: Info.plist  Pippin.swift
pippin-memos/: pippin_memos.py  pyproject.toml
pippin-memos/tests/: conftest.py  test_pippin_memos.py
pippin.xcodeproj/: project.pbxproj
scripts/: ci-vm.sh  e2e-smoke.sh  lint-detach-blocking.py  sign.sh
(+243 files in other folders)
