[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pippin-memos"
version = "0.1.0"
description = "Voice Memos CLI for the pippin macOS toolkit"
requires-python = ">=3.12"

[project.scripts]
pippin-memos = "pippin_memos:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = ["pippin_memos"]
